--- a/notatki_cpp.vcxproj.filters
+++ b/notatki_cpp.vcxproj.filters
@@ -46,9 +46,6 @@
     <Filter Include="Pliki źródłowe\input_output">
       <UniqueIdentifier>{cbb2b973-8029-458f-91e8-a766d39b66c5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Pliki źródłowe\input_output\ofstream">
-      <UniqueIdentifier>{f3e7ba1f-57d1-4f79-a75d-1e6d344ff60f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Pliki źródłowe\prototypes">
       <UniqueIdentifier>{fe4a8b17-8da9-4e7c-a5e2-c0d074675ad3}</UniqueIdentifier>
     </Filter>
@@ -181,9 +178,6 @@
     <Filter Include="Pliki źródłowe\initializer_list">
       <UniqueIdentifier>{37542910-1e64-4a53-a523-04d60f6c98f1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Pliki źródłowe\input_output\ostream">
-      <UniqueIdentifier>{8deb904b-378a-4d43-9204-95bc7663b049}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Pliki źródłowe\input_output\constants">
       <UniqueIdentifier>{4e3d965d-77ad-4be3-8ac8-8cdc3eb78cac}</UniqueIdentifier>
     </Filter>
@@ -196,11 +190,17 @@
     <Filter Include="Pliki źródłowe\RTTI\type_inference">
       <UniqueIdentifier>{56530edd-9e66-4a5b-a810-b51c660eaffb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Pliki źródłowe\input_output\methods_functions\unformated_input_output">
-      <UniqueIdentifier>{c90f86eb-c0fa-4344-a357-36e04a7eb5f3}</UniqueIdentifier>
+    <Filter Include="Pliki źródłowe\input_output_files">
+      <UniqueIdentifier>{23e94c88-37dd-42d4-9a79-767e8171f12a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Pliki źródłowe\input_output\files">
-      <UniqueIdentifier>{0c271058-caf9-4ded-874c-41d72b81e010}</UniqueIdentifier>
+    <Filter Include="Pliki źródłowe\input_output\types">
+      <UniqueIdentifier>{7c81ba79-01ae-4f3b-b251-f4484d1842f2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Pliki źródłowe\input_output\constructors">
+      <UniqueIdentifier>{7d7b1559-f814-4c65-a389-d663ca40959f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Pliki źródłowe\input_output\formatted_unformatted">
+      <UniqueIdentifier>{5843673b-35c7-4d6b-9f65-b9ee6ebef9c4}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -263,9 +263,6 @@
     </ClCompile>
     <ClCompile Include="switch.cpp">
       <Filter>Pliki źródłowe\switch</Filter>
-    </ClCompile>
-    <ClCompile Include="ofstream.cpp">
-      <Filter>Pliki źródłowe\input_output\ofstream</Filter>
     </ClCompile>
     <ClCompile Include="conditional_operator.cpp">
       <Filter>Pliki źródłowe\operators</Filter>
@@ -759,14 +756,8 @@
     <ClCompile Include="tuple.cpp">
       <Filter>Pliki źródłowe\containers_other</Filter>
     </ClCompile>
-    <ClCompile Include="ostream_operators.cpp">
-      <Filter>Pliki źródłowe\input_output\ostream</Filter>
-    </ClCompile>
     <ClCompile Include="template_stream.cpp">
       <Filter>Pliki źródłowe</Filter>
-    </ClCompile>
-    <ClCompile Include="ostream_methods.cpp">
-      <Filter>Pliki źródłowe\input_output\ostream</Filter>
     </ClCompile>
     <ClCompile Include="manipulators.cpp">
       <Filter>Pliki źródłowe\input_output\methods_functions</Filter>
@@ -786,23 +777,50 @@
     <ClCompile Include="stream_specializations.cpp">
       <Filter>Pliki źródłowe\input_output\streams</Filter>
     </ClCompile>
-    <ClCompile Include="formatted_input_functions.cpp">
-      <Filter>Pliki źródłowe\input_output\methods_functions</Filter>
-    </ClCompile>
-    <ClCompile Include="unformatted_input.cpp">
-      <Filter>Pliki źródłowe\input_output\methods_functions\unformated_input_output</Filter>
-    </ClCompile>
-    <ClCompile Include="unformatted_output.cpp">
-      <Filter>Pliki źródłowe\input_output\methods_functions\unformated_input_output</Filter>
-    </ClCompile>
     <ClCompile Include="predefined_streams.cpp">
       <Filter>Pliki źródłowe\input_output\streams</Filter>
     </ClCompile>
     <ClCompile Include="ifstream.cpp">
-      <Filter>Pliki źródłowe\input_output\files</Filter>
+      <Filter>Pliki źródłowe\input_output_files</Filter>
     </ClCompile>
     <ClCompile Include="ifstream_is_open.cpp">
-      <Filter>Pliki źródłowe\input_output\files</Filter>
+      <Filter>Pliki źródłowe\input_output_files</Filter>
+    </ClCompile>
+    <ClCompile Include="ofstream.cpp">
+      <Filter>Pliki źródłowe\input_output_files</Filter>
+    </ClCompile>
+    <ClCompile Include="file_methods.cpp">
+      <Filter>Pliki źródłowe\input_output\methods_functions</Filter>
+    </ClCompile>
+    <ClCompile Include="openmode_constants.cpp">
+      <Filter>Pliki źródłowe\input_output\constants</Filter>
+    </ClCompile>
+    <ClCompile Include="positioning_functions.cpp">
+      <Filter>Pliki źródłowe\input_output\methods_functions</Filter>
+    </ClCompile>
+    <ClCompile Include="input_output_types.cpp">
+      <Filter>Pliki źródłowe\input_output\types</Filter>
+    </ClCompile>
+    <ClCompile Include="position_constants.cpp">
+      <Filter>Pliki źródłowe\input_output\constants</Filter>
+    </ClCompile>
+    <ClCompile Include="string_functions.cpp">
+      <Filter>Pliki źródłowe\input_output\methods_functions</Filter>
+    </ClCompile>
+    <ClCompile Include="event_constants.cpp">
+      <Filter>Pliki źródłowe\input_output\constants</Filter>
+    </ClCompile>
+    <ClCompile Include="unformatted_input.cpp">
+      <Filter>Pliki źródłowe\input_output\formatted_unformatted</Filter>
+    </ClCompile>
+    <ClCompile Include="unformatted_output.cpp">
+      <Filter>Pliki źródłowe\input_output\formatted_unformatted</Filter>
+    </ClCompile>
+    <ClCompile Include="formatted_input_output.cpp">
+      <Filter>Pliki źródłowe\input_output\formatted_unformatted</Filter>
+    </ClCompile>
+    <ClCompile Include="string_specializations.cpp">
+      <Filter>Pliki źródłowe\string</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
